<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvAppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="34dp" />

    <EditText
        android:id="@+id/etInputFirstValue"
        android:layout_width="337dp"
        android:layout_height="57dp"
        android:layout_gravity="center_horizontal"
        android:hint="@string/first_value"
        android:layout_marginTop="20dp"
        android:textColor="@color/black"
        android:inputType="number"
        android:autofillHints="First Value" />

    <EditText
        android:id="@+id/etInputSecondValue"
        android:layout_width="337dp"
        android:layout_height="57dp"
        android:layout_gravity="center_horizontal"
        android:hint="@string/second_value"
        android:layout_marginTop="20dp"
        android:textColor="@color/black"
        android:inputType="number"
        android:autofillHints="Second Value" />

    <GridLayout
        android:id="@+id/gridButtons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnOrderPreserved="false"
        android:alignmentMode="alignMargins"
        android:columnCount="4"
        android:rowCount="1"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnMultiplication"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:text="@string/multiplication"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:background="@color/purple_500"
            android:layout_marginEnd="10dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnDivision"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:text="@string/division"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:background="@color/purple_500"
            android:layout_marginEnd="10dp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnAddition"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:text="@string/addition"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:background="@color/purple_500"
            android:layout_marginEnd="10dp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnReduction"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:text="@string/reduction"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:background="@color/purple_500"
            android:layout_marginEnd="10dp" />
    </GridLayout>

    <TextView
        android:id="@+id/tvOutput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/output"
        android:textSize="25sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:id="@+id/tvOutputValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/output_value"
        android:textSize="40sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal" />

</LinearLayout>